--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.1",
     "embla-carousel": "^8.1.3",
     "embla-carousel-autoplay": "^8.1.1",
     "embla-carousel-react": "^8.1.3",
@@ -26,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
