--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,1 @@
-MONGODB_URI='mongodb://admin:18c6c410402fca0823644f6db473e787@89.116.31.63:27017/?authSource=admin&readPreference=primary&ssl=false&directConnection=true'
+MONGODB_URI='mongodb://root:oitube@localhost:27017/?authSource=admin&readPreference=primary&ssl=false&directConnection=true'
