--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,21 @@
 version: '3'
 services:
-  frontend:
-    image: dan1993/oitube-front
-    ports:
-      - '3000:3000'
   backend:
     image: dan1993/oitube-api
     ports:
       - '3333:3333'
+    volumes:
+      - .:/usr/src/app
+    depends_on:
+      - mongodb
+  mongodb:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: oitube
+    ports:
+      - '27017:27017'
+    volumes:
+      - mongo_data:/data/db
+volumes:
+  mongo_data:
